services dot separators

--- a/css/style.scss
+++ b/css/style.scss
@@ -80,7 +80,7 @@ nav {
 }
 
 .services {
-	padding-top: 60px;
+	padding-top: 40px;
 	padding-bottom: 0px;
 	
 	.services-description{
@@ -159,63 +159,34 @@ nav {
 	}
 
 	.services-list{
-		width: 100%;
+		width: 80%;
 		margin: 0 auto;
 		padding-top: 60px;
 	}
 
-	.services-row{
-		li{
-			padding: 4px 10px;
-			font-weight: 300;
-			display: inline-block;
-			color: rgb(160, 160, 160);
-			position: relative;
-			margin: 0 10px;
-			font-size: 20px;
-			line-height: 1.5;
-		}
-
-		li:last-child{
-			margin-right: 0;
-		}
-
-		.dotted::after {
-			margin: 0 10px;
-			position: absolute;
-			content: "";
-			height: 1px;
-			width: 1px;
-			top: 40%;
-			left: 100%;
-			border: 1px solid grey;
-			background: grey;
-		}
+	li{
+		margin: 0 20px;
+		padding: 4px 0;
+		font-weight: 300;
+		display: inline-block;
+		position: relative;
+		color: rgb(160, 160, 160);
+		font-size: 20px;
+		line-height: 1.5;
 	}
 
-}
-
-@media(max-width: 1000px) {
-	.services{
-		width: 700px;
-		margin: 0 auto;
-
-		.services-row .dotted::after {
-			margin: 0;
-			position: absolute;
-			content: "";
-			height: 0px;
-			width: 0px;
-			top: 0;
-			left: 0;
-			border: none;
-			background: none;
-		}
+	.dotted::after {
+		margin: 0 20px;
+		position: absolute;
+		content: "";
+		height: 1px;
+		width: 1px;
+		top: 40%;
+		left: 100%;
+		border: 1px solid grey;
+		background: grey;
 	}
 
-	.gallery {
-		clear: both;
-	}
 }
 
 .gallery {
@@ -247,12 +218,12 @@ nav {
 		.title {
 			color: #3F3F3F;
 			text-transform: uppercase;
-			font-size: 24px;
+			font-size: 22px;
 			padding-bottom: 10px;
 		}
 		
 		.description {
-			font-size: 18px;
+			font-size: 20px;
 			color: rgb(160, 160, 160);
 			font-weight: 300;
 			text-align: justify;
@@ -298,4 +269,53 @@ nav {
 		padding-top: 40px
 	}
 
+}
+
+@media(max-width: 1000px) {
+
+	.services {
+		padding-top: 20px;
+	}
+
+	.services .services-circles{
+		width: 70%;
+		margin: 0 auto;
+	}
+
+	.gallery {
+		clear: both;
+	}
+
+	.about-us{
+		width: 80%;
+		margin: 0 auto;
+		.about-us-description {
+			display: block;
+			width: 100%;
+			margin: 10px 0;
+		}
+	} 
+}
+
+@media(max-width: 700px) {
+	.services{
+
+		.services-circle {
+			height: 80px;
+			width: 80px;
+			margin: 8px;
+
+			img{
+				backface-visibility:visible;
+			}
+
+			p{
+				visibility: hidden;
+			}
+
+			&:hover img{
+				transform: translateX(-50%) translateY(-50%) rotateY(-180deg);
+			}
+		}
+	}
 }
