fix safari, webkit flexbox

--- a/css/style.scss
+++ b/css/style.scss
@@ -60,6 +60,7 @@ nav {
 		position: absolute;
 		top: 50%;
 		left: 50%;
+		-webkit-transform: translateX(-50%) translateY(-50%);
 		transform: translateX(-50%) translateY(-50%);
 	}
 
@@ -105,9 +106,13 @@ nav {
 
 	.services-circles{
 		@include clearfixed;
+		display: -webkit-flex;
 		display: flex;
+		-webkit-flex-direction: row;
 		flex-direction: row;
+		-webkit-justify-content: center; // center horizontally
 		justify-content: center; // center horizontally
+		-webkit-flex-wrap: wrap; // don't scale, wrap to next row
 		flex-wrap: wrap; // don't scale, wrap to next row
 	}
 	
@@ -117,6 +122,7 @@ nav {
 		height: 200px;
 		width: 200px;
 		margin: 0 20px;
+		-webkit-perspective:500px;
 		perspective:500px;
 		margin-top: 20px;
 		
@@ -125,8 +131,10 @@ nav {
 			width: 100%;
 			position: absolute;
 			transition:all .5s;
+			-webkit-transform: translateX(-50%) translateY(-50%);
 			transform: translateX(-50%) translateY(-50%);
 			top: 50%;
+			-webkit-backface-visibility:hidden;
       backface-visibility:hidden;
 		}
 
@@ -141,6 +149,7 @@ nav {
 			padding: 0 20px;
 			color: rgb(140, 140, 140);
 			font-weight: 300;
+			-webkit-transform: rotateY(180deg); /* By Default set the back to be rotate */
 			transform: rotateY(180deg); /* By Default set the back to be rotate */
 		}
 
@@ -149,10 +158,12 @@ nav {
 		}
 
 		&:hover img{
+			-webkit-transform: translateX(-50%) translateY(-50%) rotateY(-180deg);
 			transform: translateX(-50%) translateY(-50%) rotateY(-180deg);
 		}
 
 		&:hover p{
+			-webkit-transform:rotateY(0deg);
 			transform:rotateY(0deg);
 		}
 
@@ -378,6 +389,7 @@ nav {
 			margin: 10px;
 
 			img{
+				-webkit-backface-visibility:visible;
 				backface-visibility:visible;
 			}
 
@@ -387,6 +399,7 @@ nav {
 			}
 
 			&:hover img{
+				-webkit-transform: translateX(-50%) translateY(-50%) rotateY(-180deg);	
 				transform: translateX(-50%) translateY(-50%) rotateY(-180deg);	
 			}
 		}
@@ -491,6 +504,7 @@ nav {
 			}
 
 			&:hover img{
+				-webkit-transform: translateX(-50%) translateY(-50%) rotateY(0);	
 				transform: translateX(-50%) translateY(-50%) rotateY(0);	
 			}
 		}
